src/index.css
/* RESET */

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Georgia, 'Times New Roman', Times, serif;
}

/* HEADER */

header{
  width: 100%;
  height: 100px;
  background: #ede7e3;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  text-transform: uppercase;
  padding: 0 20px;
}

.menu{
  margin-right: 10px;
  transition: 0.4s;
}

.menu a{
  text-decoration: none;
  text-transform: capitalize;
  margin-right: 10px;
  color: black;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  overflow: hidden;
}

.menu a::before{
  content: "";
  position: absolute;
  z-index: -1;
  left: 51%;
  right: 51%;
  bottom: 0;
  background: #82C0CC;
  height: 4px;
  -webkit-transition-property: left, right;
  transition-property: left, right;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.menu a:hover::before, .menu a:focus::before, .menu:active::before {
  left: 0;
  right: 0;
}

.hamburguer-icon{
  order: 1;
}

.hamburguer-icon, .cross-icon, #check-button{
  display: none;
}

.hamburguer-icon, .cross-icon{
  font-size: 30px;
  cursor: pointer;
  padding: 0 10px;
  transition: 0.4s;
}

/* BANNER */

#banner-section{
  background-image: url(../src/assets/images/accounting.jpg);
  width: 100%;
  height: 50vh;
  background-size: cover;
  background-position: center;
}

.banner-container{
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 80px 80px;
}

.banner-container h2{
  text-transform: uppercase;
  font-size: 30px;
  font-weight: 800;
}

.banner-container p{
  padding-top: 20px;
}

/* ABOUT US */

#about-us-section{
  width: 100%;
  background-color: #82C0CC;

}

.about-us-container{
  display: block;
  padding: 20px 20px
}

.about-us-title, .about-us-description{
  padding: 10px 0;
  text-align: center;
}

.profile-container {
  padding: 20px 20px;
  display: flex;
  gap: 2em;
}

.profile-element h3, p{
  padding-top: 20px;
  text-align: center;
}

.image-container{
  display: flex;
  align-content: center;
  justify-content: center;
}


.profile-image{
  height: 230px;
  border-radius: 10%;
  box-shadow: 0 6px 20px rgba(0.2, 0.2, 0, 0.9);
}

#services-section{
  background: #489FB5;
}

#services-section h2{
  padding-top: 20px;
  text-align: center;
}

.services-container{
  padding: 20px 20px;
  display: flex;
  gap: 2em;
}

.icon-container{
  display: flex;
  align-content: center;
  justify-content: center;
}

.services-element h3, p{
  padding-top: 20px;
  text-align: center;
}

/* FOOTER */

#footer{
  background: #ede7e3;
  width: 100%;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 0.2em;
  padding: 5px 0 
}

#footer a{
  text-decoration: none;
  color: black;
  font-weight: 900;
}

#footer a:hover{
  cursor: pointer;
  color:#489FB5;
  text-decoration: underline;
}

/* RESPONSIVE */

@media(max-width: 768px){

  .hamburguer-icon, .cross-icon, .menu a{
    display: block;
  }


  .menu{
    background: #ede7e3;
    position: fixed;
    width: 100%;
    height: 100vh;
    top: 0;
    right: -100%;
    z-index: 0;
    text-align: center;
    padding: 100px 0;
    transition: 0.9s;
  }

  .menu a{
    margin: 50px 50px;
  }

  .cross-icon{
    position: absolute;
    top: 20px;
    right: 20px;
  }
  
  #check-button:checked ~ .menu{
    right: 0;
  }
  
}

